Modificando las card

--- a/src/views/register.html
+++ b/src/views/register.html
@@ -124,18 +124,19 @@
 <footer>
     <div>
         <i class="fa-solid fa-credit-card"></i>
-    <h2>Paga en cuotas o efectivo</h2>
+    <h4>Paga en cuotas o efectivo</h4>
     <p>Con Mercado Liebre Cash, tenés cuotas sin </p>
     <p>interés con tarjeta o efectivo en puntos de </p>
     <p>pago. ¡Y siempre es seguro!</p>
     </div>
     <div>
-        <h2>Envío gratis desde los $2.500</h2>
+        <h4>Envío gratis desde los $2.500</h4>
     <p>Solo por estar registrado en Mercado Liebre </p>
     <p>tenés envíos gratis en miles de productos.Es  </p>
     <p>un beneficio de Mercado Puntos</p>
     </div>
-    <div><h2>Seguridad de principio a fin</h2>
+    <div>
+        <h4>Seguridad de principio a fin</h4>
     <p>¿No te gusta? ¡Devolvelo! En MercadoLiebre</p>
     <p>no hay nada que no puedas hacer porque estás</p>
     <p>siempre protegid@.</p>
