--- a/src/views/home.html
+++ b/src/views/home.html
@@ -25,99 +25,122 @@
         </form>
         </div>
         <p>Comprá en cuotas y sin tarjeta de crédito</p>
-        <ul>
+        <ul class="item">
             <li><a href="#">Ofertas</a></li>
             <li><a href="#">Tiendas oficiales</a></li>
             <li><a href="#">Vender</a></li>
             <li><a href="#">Ayuda</a></li>
         </ul>
-        <ul>
+        <ul class="item">
             <li><a href="#">Crear tu cuenta<i class="fa-solid fa-user-plus"></i></a></li>
             <li><a href="#">Ingresa<i class="fa-solid fa-right-to-bracket"></i></a></li>
             <li><a href="#">Mis compras <i class="fa-solid fa-basket-shopping"></i></a></li>
         </ul>
+        <div class="menu-burger">
+            <i class="fa-solid fa-bars"></i>
+        </div>
         </nav>
+        <div class="banner">
+            <img src="/img/img-home-banner.jpg" alt="banner.jpg" >
+           </div>
     </header>
-
 <main>
   
-    <section>
+    <section class="articulos">
         <h1>Basado en tu ultima visita</h1>
-        <article>
+        <article class="card">
             <img src="./images/img-cafetera-moulinex.jpg" width="300px" alt="cafeteria" />
-            <p>$6.770 </p>
-            <p> 40%OFF</p>
-            <h3>Cafeteria Moulinex</h3> 
+            <i class="fa-solid fa-truck"></i>
+            <div>
+            <p class="precios">$6.770 </p>
+            <p class="descuentos"> 40%OFF</p>
+            </div>
+            <h3 class="descripciones">Cafeteria Moulinex</h3> 
         </article>
-        <article>
+        <article class="card">
             <img src ="./images/img-macbook-pro-2019.jpg" width="300px" alt="macbook">
-            <p >$230.000 </p>
-            <p >20% off</p>
-           <h3>MacBook Pro 2019</h3>
+            <i class="fa-solid fa-truck"></i>
+            <p class="precios">$230.000 </p>
+            <p class="descuentos">20% off</p>
+           <h3 class="descripciones">MacBook Pro 2019</h3>
         
         </article>
-        <article>
+        <article class="card">
             <img src="./images/img-samsung-galaxy-s10.jpg" width="300px" alt ="samsung">
-            <p>$70.500</p>
-            <p> 10% off</p>
-            <h3>Samsung Galaxy S10</h3>
+            <i class="fa-solid fa-truck"></i>
+            <p class="precios">$70.500</p>
+            <p class="descuentos"> 10% off</p>
+            <h3 class="descripciones">Samsung Galaxy S10</h3>
         </article>
-        <article>
+        <article class="card">
             <img src="./images/img-tv-samsung-smart.jpg" width="300px" alt="smarttv">
-            <p>$23.200</p>
-            <p>5% off</p>
-            <h3>SmartTv Samsung 43 </h3>
+            <i class="fa-solid fa-truck"></i>
+            <p class="precios">$23.200</p>
+            <p class="descuentos">5% off</p>
+            <h3 class="descripciones">SmartTv Samsung 43 </h3>
         </article>
     </section>
-    <section>
+    <section class="articulos">
             <h1>Seccion de Ofertas</h1>
-            <article>
+            <article class="card">
                 <img src="./images/img-cafetera-moulinex.jpg" width="300px" alt="cafeteria">
-                <p>$6.770 </p>
-                <p> 40%OFF</p>
-                <h3>Cafeteria Moulinex</h3> 
+                <i class="fa-solid fa-truck"></i>
+                <p class="precios">$6.770 </p>
+                <p class="descuentos"> 40%OFF</p>
+                <h3 class="descripciones">Cafeteria Moulinex</h3> 
             </article>
-            <article>
+            <article class="card">
                 <img src ="./images/img-macbook-pro-2019.jpg" width="300px" alt="macbook">
-                <p>$230.000 </p>
-                <p>20% off</p>
-                <h3>MacBook Pro 2019</h3>
+                <i class="fa-solid fa-truck"></i>
+                <p class="precios">$230.000 </p>
+                <p class="descuentos">20% off</p>
+                <h3 class="descripciones">MacBook Pro 2019</h3>
             </article>
-            <article>
+            <article class="card">
                 <img src="./images/img-samsung-galaxy-s10.jpg" width="300px" alt ="samsung">
-                <p>$70.500</p>
-                <p> 10% off</p>
-                <h3>Samsung Galaxy S10</h3>
+                <i class="fa-solid fa-truck"></i>
+                <p class="precios">$70.500</p>
+                <p class="descuentos"> 10% off</p>
+                <h3 class="descripciones">Samsung Galaxy S10</h3>
             </article>
-            <article>
+            <article class="card">
                 <img src="./images/img-tv-samsung-smart.jpg" width="300px" alt="smarttv">
-                <p>$23.200</p>
-                <p>5% off</p>
-                <h3>SmartTv Samsung 43 </h3>
+                <i class="fa-solid fa-truck"></i>
+                <p class="precios">$23.200</p>
+                <p class="descuentos">5% off</p>
+                <h3 class="descripciones">SmartTv Samsung 43 </h3>
             </article>
-        </section>
+    </section>
     
 </main>
 
 <footer>
-    <section>
-        <h3>Paga en cuotas o efectivo</h3>
+    <div class="info-footer">
+    <section class="footer-icono">
+        <i class="fa-solid fa-credit-card"></i>
+        <h4>Paga con tarjeta o efectivo</h4>
         <p>Con Mercado Liebre Cash, tenés cuotas sin 
         interés con tarjeta o efectivo en puntos de 
         pago. ¡Y siempre es seguro!</p>
     </section>
-    <section>
-        <h3>Envío gratis desde los $2.500</h3>
+    <section class="footer-icono">
+        <i class="fa-solid fa-gift"></i>
+        <h4>Envío gratis desde los $2.500</h4>
         <p>Solo por estar registrado en Mercado Liebre 
         tenés envíos gratis en miles de productos.Es  
         un beneficio de Mercado Puntos</p>
     </section>
-    <section>
-        <h3>Seguridad de principio a fin</h3>
+    <section class="footer-icono">
+        <i class="fa-solid fa-user-shield"></i>
+        <h4>Seguridad de principio a fin</h4>
         <p>¿No te gusta? ¡Devolvelo! En MercadoLiebre
         no hay nada que no puedas hacer porque estás
         siempre protegid@.</p>
     </section>
+    </div>
+    <div>
+        <p>Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
+    </div>
 </footer>
 </body>
 </html>
