--- a/src/views/home.html
+++ b/src/views/home.html
@@ -48,6 +48,7 @@
   
     <section class="articulos">
         <h1>Basado en tu ultima visita</h1>
+        <div class="container">
         <article class="card">
             <img src="./images/img-cafetera-moulinex.jpg" width="300px" alt="cafeteria" />
             <i class="fa-solid fa-truck"></i>
@@ -79,9 +80,11 @@
             <p class="descuentos">5% off</p>
             <h3 class="descripciones">SmartTv Samsung 43 </h3>
         </article>
+        </div>
     </section>
     <section class="articulos">
             <h1>Seccion de Ofertas</h1>
+            <div class="container">
             <article class="card">
                 <img src="./images/img-cafetera-moulinex.jpg" width="300px" alt="cafeteria">
                 <i class="fa-solid fa-truck"></i>
@@ -110,6 +113,7 @@
                 <p class="descuentos">5% off</p>
                 <h3 class="descripciones">SmartTv Samsung 43 </h3>
             </article>
+            </div>
     </section>
     
 </main>
