modificando logo de envio

--- a/src/views/home.html
+++ b/src/views/home.html
@@ -16,33 +16,34 @@
 <body>
     <header>
         <nav>
-        <img src="./images/logo-mercado-liebre.svg" alt="logo">
-        <div>
-        <form action="" method="get">
-            
+         <div class="logo">
+          <img src="./images/logo-mercado-liebre.svg" alt="logo">
+         </div>
+         <div>
+            <form action="" method="get">
             <input type="text" name="" id="" placeholder="Buscar productos, marcas" />
-            <button type="submit">enviar</button>
-        </form>
-        </div>
-        <p>Comprá en cuotas y sin tarjeta de crédito</p>
-        <ul class="item">
+            <button type="img"><i class="fa-solid fa-magnifying-glass"></i></button>
+            </form>
+         </div>
+         <p>Comprá en cuotas y sin tarjeta de crédito</p>
+         <ul class="item">
             <li><a href="#">Ofertas</a></li>
             <li><a href="#">Tiendas oficiales</a></li>
             <li><a href="#">Vender</a></li>
             <li><a href="#">Ayuda</a></li>
-        </ul>
-        <ul class="item">
+         </ul>
+         <ul class="item">
             <li><a href="#">Crear tu cuenta<i class="fa-solid fa-user-plus"></i></a></li>
             <li><a href="#">Ingresa<i class="fa-solid fa-right-to-bracket"></i></a></li>
             <li><a href="#">Mis compras <i class="fa-solid fa-basket-shopping"></i></a></li>
-        </ul>
-        <div class="menu-burger">
+         </ul>
+         <div class="menu-burger">
             <i class="fa-solid fa-bars"></i>
-        </div>
+         </div>
         </nav>
         <div class="banner">
-            <img src="/img/img-home-banner.jpg" alt="banner.jpg" >
-           </div>
+            <img src="./images/img-home-banner.jpg" alt="banner.jpg" >
+        </div>
     </header>
 <main>
   
