--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,7 @@
 
     padding:0;
     margin: 0;
+    box-sizing: border-box;
 }
     body{
         font-family: 'Roboto' , sans-serif;
@@ -12,8 +13,14 @@
     }
     .banner img{
         width: 100%;
-        
+        padding: 10px 10px;
     }
+  
+    .logo img{
+        width: 100%;
+        padding: 30px 10px;
+    }   
+    
     :root{
         --Amarillo: #EAC926;
         --Azul: #03264C;
@@ -22,9 +29,7 @@
         --Grisclaro: #ebebeb; 
         --Verde: #39b54a;
     }
-    .banner-imagen{
-        width: 100%;
-    }
+   
     .item li a{
       color:#000;
       text-decoration: none;
@@ -35,14 +40,14 @@
        
     }
     .card{
-        width: 80%;
+        width: 90%;
         border:1px solid var(--Grisclaro);
         box-shadow: 0px 0px 10px rgb(100,100,100);
         padding:5px;
         margin:10px;
     }
     .card img{
-        width: 100%;
+        width: 90%;
         border-bottom: 1px solid var(--Grisclaro);
     }
     .fa-bars{
@@ -55,7 +60,7 @@
         text-align: center;
     }
     h1{
-        font-size: 24px;
+        font-size: 30px;
     }
     .precios{
         font-size: 18px;
@@ -73,6 +78,20 @@
         width: 90%;
         
     }
+    main section article i {
+        display: block;
+        font-size: 16px;
+        padding: 5px;
+        width: 50px;
+        height: 50px;
+        border: 1px solid #39b54a;
+        background-color: #FFF;
+        border-radius: 50%;
+        position: absolute;
+        right: 20px;
+        top: -15px;
+
+    }
    
     .info-footer{
         text-align: center;
@@ -81,16 +100,28 @@
         color: var(--Grisoscuro);
     }
     
-    @media(min-widt: 460){
+    @media(min-width: 460px){
 
     .container{
         display: flex;
+        flex-direction: row;
         flex-wrap: wrap;
-
+        justify-content: center;
     }
     .card{
-        width: 35%;
+        width: 45%;
+       
     }
+    .card img {
+        width: 90%;
+    }
+    }
+    @media(min-width: 968px){
+        .card{
+            width: 200px;
+            
+        }
+       
+        }
 
-    }
-    
+        
