--- a/src/views/home.html
+++ b/src/views/home.html
@@ -54,8 +54,7 @@
             <img src="./images/img-cafetera-moulinex.jpg" width="300px" alt="cafeteria" />
             <i class="fa-solid fa-truck"></i>
             <div>
-            <p class="precios">$6.770 </p>
-            <p class="descuentos"> 40%OFF</p>
+            <p class="precios">$6.770 </p> <p class="descuentos"> 40%OFF</p>
             </div>
             <h3 class="descripciones">Cafeteria Moulinex</h3> 
         </article>
