--- a/src/views/register.html
+++ b/src/views/register.html
@@ -16,33 +16,35 @@
 <body>
     <header>
         <nav>
-        <div class ="logo">
-        <img src="./images/logo-mercado-liebre.svg" alt="logo">
-       
-        </div>
-        <form action="" method="get">
-            
+         <div class="logo">
+          <img src="./images/logo-mercado-liebre.svg" alt="logo">
+         </div>
+         <div>
+            <form action="" method="get">
             <input type="text" name="" id="" placeholder="Buscar productos, marcas" />
-            <button type="submit">enviar</button>
-        </form>
-        <p></p><i class="fa-solid fa-hand-holding-dollar"></i>Compra en cuotas y sin tarjeta de credito</p>
-        <ul  class="item">
+            <button type="img"><i class="fa-solid fa-magnifying-glass"></i></button>
+            </form>
+         </div>
+         <p>Comprá en cuotas y sin tarjeta de crédito</p>
+         <ul class="item">
             <li><a href="#">Ofertas</a></li>
             <li><a href="#">Tiendas oficiales</a></li>
             <li><a href="#">Vender</a></li>
             <li><a href="#">Ayuda</a></li>
-        </ul>
-        <ul class="item">
+         </ul>
+         <ul class="item">
             <li><a href="#">Crear tu cuenta<i class="fa-solid fa-user-plus"></i></a></li>
             <li><a href="#">Ingresa<i class="fa-solid fa-right-to-bracket"></i></a></li>
             <li><a href="#">Mis compras <i class="fa-solid fa-basket-shopping"></i></a></li>
-        </ul>
-        
-        <div class="burger-menu">
-            <i class="fas fa-bars"></i>
-          </div>
-    </nav>
-</header>
+         </ul>
+         <div class="menu-burger">
+            <i class="fa-solid fa-bars"></i>
+         </div>
+        </nav>
+        <div class="banner">
+            <img src="./images/img-home-banner.jpg" alt="banner.jpg" >
+        </div>
+    </header>
 
 <main>
     <form class="formulario" action="" method="get">
@@ -120,26 +122,32 @@
         <button>borrar datos del formulario</button>
     </form>
 </main>
-
 <footer>
-    <div>
+    <div class="info-footer">
+    <section class="footer-icono">
         <i class="fa-solid fa-credit-card"></i>
-    <h4>Paga en cuotas o efectivo</h4>
-    <p>Con Mercado Liebre Cash, tenés cuotas sin </p>
-    <p>interés con tarjeta o efectivo en puntos de </p>
-    <p>pago. ¡Y siempre es seguro!</p>
-    </div>
-    <div>
+        <h4>Paga con tarjeta o efectivo</h4>
+        <p>Con Mercado Liebre Cash, tenés cuotas sin 
+        interés con tarjeta o efectivo en puntos de 
+        pago. ¡Y siempre es seguro!</p>
+    </section>
+    <section class="footer-icono">
+        <i class="fa-solid fa-gift"></i>
         <h4>Envío gratis desde los $2.500</h4>
-    <p>Solo por estar registrado en Mercado Liebre </p>
-    <p>tenés envíos gratis en miles de productos.Es  </p>
-    <p>un beneficio de Mercado Puntos</p>
+        <p>Solo por estar registrado en Mercado Liebre 
+        tenés envíos gratis en miles de productos.Es  
+        un beneficio de Mercado Puntos</p>
+    </section>
+    <section class="footer-icono">
+        <i class="fa-solid fa-user-shield"></i>
+        <h4>Seguridad de principio a fin</h4>
+        <p>¿No te gusta? ¡Devolvelo! En MercadoLiebre
+        no hay nada que no puedas hacer porque estás
+        siempre protegid@.</p>
+    </section>
     </div>
     <div>
-        <h4>Seguridad de principio a fin</h4>
-    <p>¿No te gusta? ¡Devolvelo! En MercadoLiebre</p>
-    <p>no hay nada que no puedas hacer porque estás</p>
-    <p>siempre protegid@.</p>
+        <p>Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
     </div>
 </footer>
 </body>
