--- a/src/views/login.html
+++ b/src/views/login.html
@@ -25,7 +25,7 @@
             <button type="img"><i class="fa-solid fa-magnifying-glass"></i></button>
             </form>
          </div>
-         <p>Comprá en cuotas y sin tarjeta de crédito</p>
+         <p><i class="fa-solid fa-hand-holding-dollar"></i>Comprá en cuotas y sin tarjeta de crédito</p>
          <ul class="item">
             <li><a href="#">Ofertas</a></li>
             <li><a href="#">Tiendas oficiales</a></li>
@@ -41,21 +41,21 @@
             <i class="fa-solid fa-bars"></i>
          </div>
         </nav>
-        <div class="banner">
-            <img src="./images/img-home-banner.jpg" alt="banner.jpg" >
-        </div>
+        
     </header>
 
-<main>
+<main class="f-contenido-login">
     <form class="formulario" action="" method="post">
         <h2>Iniciar Sesión</h2>
         <div class="campo">
             <input type="text" name="nombreyapellido" id="nombreyapellido" placeholder="Nombre de Usuario">
         </div>
         <div class="campo">
-            <input type="password" name="contrasena" id="contrasena" placeholder="Contraseña">
+            <input type="password" name="contrasena" id="contrasena" placeholder="Elegí tu contraseña">
         </div>
-        <button>enviar</button>
+        <div class="campo">
+        <button class="boton-enviar">enviar</button>
+        </div>
     </form>
 </main>
 
