--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,118 +3,197 @@
     padding:0;
     margin: 0;
     box-sizing: border-box;
+    font-family: 'Roboto' , sans-serif;
 }
-    body{
-        font-family: 'Roboto' , sans-serif;
-    }
-    nav{
-        background-color: var(--Amarillo);
-    }
-    .banner{
-        width: 100%;
-        
-    }
-    .banner img{
-        width: 100%;
-        padding: 10px 10px;
-    }
-  
-    .logo img{
-        width: 100%;
-        padding: 30px 10px;
-    }   
     
-    :root{
-        --Amarillo: #EAC926;
-        --Azul: #03264C;
-        --Celeste: #1259c3;
-        --Grisoscuro: #666;
-        --Grisclaro: #ebebeb; 
-        --Verde: #39b54a;
+nav{
+    background-color: var(--Amarillo);
+    padding:15px;
     }
+.banner{
+     width: 100%;
+        
+ }
+.banner img{
+    width: 100%;
+    height: auto;
+    padding: 10px 10px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+  
+div .logo img{
+    width: 50%;
+    padding: 30px 10px;
+}   
+.buscador{
+    display:flex;
+    flex-wrap:wrap;
+    justify-content: space-between;
+    align-items: center;
+}
+.buscador-top{
+    display: flex;
+    align-items: center;
+}
+.buscador form{
+    margin: 10px;
+    position: relative;
+    width: 50%;
+}
+.buscador input{
+    border:none;
+    padding: 10px;
+    border-radius: 5px;
+    
+}
+    
+:root{
+    --Amarillo: #EAC926;
+    --Azul: #03264C;
+    --Celeste: #1259c3;
+    --Grisoscuro: #666;
+    --Grisclaro: #ebebeb; 
+    --Verde: #39b54a;
+}
    
-    .item li a{
-      color:#000;
-      text-decoration: none;
-    }
-    .articulos{
-        text-align: center;
-        font-size: 24px;
+.item {
+    color:#000;
+    display: none;
+}
+.item li {
+    list-style: none;
+    text-decoration: none;
+}
+.item li a {
+    text-decoration: none;
+    color:#000;
+}
+.articulos{
+    text-align: center;
+    font-size: 24px;
        
-    }
-    .card{
-        width: 90%;
-        border:1px solid var(--Grisclaro);
-        box-shadow: 0px 0px 10px rgb(100,100,100);
-        padding:5px;
-        margin:10px;
-    }
-    .card img{
-        width: 90%;
-        border-bottom: 1px solid var(--Grisclaro);
-    }
-    .fa-bars{
-        background-color: var(--Celeste);
-        color:#fff;
-        padding:10px;
-        border-radius: 5px;
+}
+.card:hover{
+    box-shadow: 0px 0px 10px rgb(100,100,100);
+}
+.card{
+    
+    background-color:#FFF;
+    padding:5px;
+    margin:10px;
+}
+.card img{
+    width: 90%;
+    border-bottom: 1px solid var(--Grisclaro);
+}
+.camion:hover {
+    
+    transform: rotate(-90deg);
+    transition: all 0.55s ease-in-out ;
+    
+} 
+.precio-desc{
+    display: flex;
+    align-items: center;
+    width: 100%;
+}
+
+
+.fa-bars{
+    background-color: var(--Celeste);
+    color:#fff;
+    font-size: 34px;
+    padding:10px;
+    border-radius: 5px;
+}
+.compras-cuotas-tarjeta{
+    width: 100%;
+    text-align: center;
+    padding: 5px;
+}
+.menu-burger{
+    text-align: center;
+    padding: 15px 0;
+}
+h1{
+    font-size: 30px;
+}
+.precios{
+    width: 30%;
+    font-size: 18px;
+    text-align: left;
+}
+.descuentos{
+    font-size: 14px;
+    width: 70%;
+    text-align: right;
+    color: var(--Verde);
+}
+.descripciones{
+    font-size: 16px;
+    display:none; 
+    color:#39b54a;
+}
+.descripciones:hover{
+    display:block;
+    color:#EAC926;
+    
+}
+p{
+    font-size: 12px;
+    text-align: center;
+}
+main {
+    width: 100%;
+    background-color:var(--Grisclaro);
+       
+}
+.fa-truck{
+    color:var(--Verde);
+}
+
+main section article i {
+    display: block;
+    font-size: 16px;
+    padding: 5px;
+    width: 30px;
+    height: 30px;
+    border: 1px solid #39b54a;
+    background-color: #FFF;
+    border-radius: 50%;
+    position: relative;
+    left: 80px;
+    right: 20px;
+    top: -15px;
+    
+     
+
+}
+.container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+   
+.info-footer{
+    text-align: center;
+}
+h4{
+    color: var(--Grisoscuro);
+}
+    
+    
+@media(min-width: 361px){
+    main section article i {
+        left:60px;
     }
     .menu-burger{
-        text-align: center;
-    }
-    h1{
-        font-size: 30px;
-    }
-    .precios{
-        width: 30%;
-        font-size: 18px;
-        text-align: left;
-    }
-    .descuentos{
-        font-size: 16px;
-        width: 70%;
-        text-align: right;
-    }
-    .descripciones{
-        font-size: 16px;
-    }
-    p{
-        font-size: 12px;
-    }
-    main{
-        width: 90%;
-        
-    }
-    main section article i {
-        display: block;
-        font-size: 16px;
-        padding: 5px;
-        width: 50px;
-        height: 50px;
-        border: 1px solid #39b54a;
-        background-color: #FFF;
-        border-radius: 50%;
-        position: relative;
-        right: 20px;
-        top: -15px;
-      
-
-    }
-   
-    .info-footer{
-        text-align: center;
-    }
-    h4{
-        color: var(--Grisoscuro);
-    }
-    .item{
-        display:none;
-    }
-    @media(min-width: 460px){
-    .fa-bars{
         display: none;
     }
-    .item{
+    .item {
         display:block;
     }
     .container{
@@ -127,25 +206,86 @@
         width: 45%;
        
     }
+    
     .card img {
         width: 90%;
     }
-    }
-    @media(min-width: 968px){
+} 
+    @media(min-width: 769px){
+        
+       
         .card{
             width: 200px;
             
         }
-       
+        .menu-burger{
+           display:none;
         }
+        .buscador{
+            flex-wrap:nowrap;
+        }
+        footer{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+    }
+
 .formulario{
     display: flex;
     flex-direction: column;
     align-items: center;
     margin:20px;
     background-color: var(--Grisclaro);
+   
+    
+    
+}
+
+
+
+.f-contenido{
+    
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    background-color: #FFF;
+    
+    }
+.f-contenido-login{
+    width: 500px;
 }
 .campo{
- text-align: center;
+  text-align: center;
+  padding:20px;
+  width: 100%;
+}
+.campo-radio {
+    display: flex;
+    align-items: center;
+}
+.campo-radio label{
+    position: relative;
+    right: 150px;
+}
+.campo input{
+    width: 100%;
+
+}
+.campo-checkbox-opcion{
+    text-align: center;
+    padding:20px; 
+}
+button {
+   justify-content: center;
+   color:#FFF;
+   background-color: var(--Celeste);
+}
+.boton-enviar{
+    width: 100%;
+}
+
+.boton-enviar:hover{
+    background-color: #0022AA;
 }
         
