--- a/src/views/home.html
+++ b/src/views/home.html
@@ -69,24 +69,27 @@
          <article class="card">
             <img src ="./images/img-macbook-pro-2019.jpg" width="300px" alt="macbook">
             <div class=""><i class="fa-solid fa-truck camion"></i></div>
-            <p class="precios">$230.000 </p>
-            <p class="descuentos">20% off</p>
-           <h3 class="descripciones">MacBook Pro 2019</h3>
+            <div class="precio-desc">
+                <p class="precios">$6.770 </p> <p class="descuentos"> 40%OFF</p>
+                <div class="descripciones"><h3>Cafeteria Moulinex</h3> </div>
+            </div>
         
          </article>
          <article class="card">
             <img src="./images/img-samsung-galaxy-s10.jpg" width="300px" alt ="samsung">
             <div class=""><i class="fa-solid fa-truck camion"></i></div>
-            <p class="precios">$70.500</p>
-            <p class="descuentos"> 10% off</p>
-            <h3 class="descripciones">Samsung Galaxy S10</h3>
+            <div class="precio-desc">
+                <p class="precios">$6.770 </p> <p class="descuentos"> 40%OFF</p>
+                <div class="descripciones"><h3>Cafeteria Moulinex</h3> </div>
+            </div>
          </article>
          <article class="card">
             <img src="./images/img-tv-samsung-smart.jpg" width="300px" alt="smarttv">
             <div class=""><i class="fa-solid fa-truck camion"></i></div>
-            <p class="precios">$23.200</p>
-            <p class="descuentos">5% off</p>
-            <h3 class="descripciones">SmartTv Samsung 43 </h3>
+            <div class="precio-desc">
+                <p class="precios">$6.770 </p> <p class="descuentos"> 40%OFF</p>
+                <div class="descripciones"><h3>Cafeteria Moulinex</h3> </div>
+            </div>
          </article>
         </div>
     </section>
@@ -96,30 +99,34 @@
              <article class="card">
                 <img src="./images/img-cafetera-moulinex.jpg" width="300px" alt="cafeteria">
                 <div class=""><i class="fa-solid fa-truck camion"></i></div>
-                <p class="precios">$6.770 </p>
-                <p class="descuentos"> 40%OFF</p>
-                <h3 class="descripciones">Cafeteria Moulinex</h3> 
+                <div class="precio-desc">
+                    <p class="precios">$6.770 </p> <p class="descuentos"> 40%OFF</p>
+                    <div class="descripciones"><h3>Cafeteria Moulinex</h3> </div>
+                </div>
              </article>
              <article class="card">
                 <img src ="./images/img-macbook-pro-2019.jpg" width="300px" alt="macbook">
                 <div class=""><i class="fa-solid fa-truck camion"></i></div>
-                <p class="precios">$230.000 </p>
-                <p class="descuentos">20% off</p>
-                <h3 class="descripciones">MacBook Pro 2019</h3>
+                <div class="precio-desc">
+                    <p class="precios">$6.770 </p> <p class="descuentos"> 40%OFF</p>
+                    <div class="descripciones"><h3>Cafeteria Moulinex</h3> </div>
+                </div>
              </article>
              <article class="card">
                 <img src="./images/img-samsung-galaxy-s10.jpg" width="300px" alt ="samsung">
                 <div class=""><i class="fa-solid fa-truck camion"></i></div>
-                <p class="precios">$70.500</p>
-                <p class="descuentos"> 10% off</p>
-                <h3 class="descripciones">Samsung Galaxy S10</h3>
+                <div class="precio-desc">
+                    <p class="precios">$6.770 </p> <p class="descuentos"> 40%OFF</p>
+                    <div class="descripciones"><h3>Cafeteria Moulinex</h3> </div>
+                </div>
              </article>
              <article class="card">
                 <img src="./images/img-tv-samsung-smart.jpg" width="300px" alt="smarttv">
                 <div class=""><i class="fa-solid fa-truck camion"></i></div>
-                <p class="precios">$23.200</p>
-                <p class="descuentos">5% off</p>
-                <h3 class="descripciones">SmartTv Samsung 43 </h3>
+                <div class="precio-desc">
+                    <p class="precios">$6.770 </p> <p class="descuentos"> 40%OFF</p>
+                    <div class="descripciones"><h3>Cafeteria Moulinex</h3> </div>
+                </div>
              </article>
             </div>
     </section>
