--- a/src/views/register.html
+++ b/src/views/register.html
@@ -16,30 +16,38 @@
 <body>
     <header>
         <nav>
-         <div class="logo">
-          <img src="./images/logo-mercado-liebre.svg" alt="logo">
+         <div class="buscador">
+            <div class="buscador-top"> 
+            <div class="logo">
+                 <img src="./images/logo-mercado-liebre.svg" alt="logo">
+                </div>
+            
+               <form action="" method="get">
+               <input type="text" name="" id="" placeholder="Buscar productos, marcas" />
+               <button type="img"><i class="fa-solid fa-magnifying-glass"></i></button>
+               </form>
+               </div>
+               <p class="compras-cuotas-tarjeta"><i class="fa-solid fa-hand-holding-dollar"></i>Comprá en cuotas y sin tarjeta de crédito</p>
          </div>
-         <div>
-            <form action="" method="get">
-            <input type="text" name="" id="" placeholder="Buscar productos, marcas" />
-            <button type="img"><i class="fa-solid fa-magnifying-glass"></i></button>
-            </form>
-         </div>
-         <p><i class="fa-solid fa-hand-holding-dollar"></i>Comprá en cuotas y sin tarjeta de crédito</p>
-         <ul class="item">
-            <li><a href="#">Ofertas</a></li>
-            <li><a href="#">Tiendas oficiales</a></li>
-            <li><a href="#">Vender</a></li>
-            <li><a href="#">Ayuda</a></li>
-         </ul>
-         <ul class="item">
-            <li><a href="#">Crear tu cuenta<i class="fa-solid fa-user-plus"></i></a></li>
-            <li><a href="#">Ingresa<i class="fa-solid fa-right-to-bracket"></i></a></li>
-            <li><a href="#">Mis compras <i class="fa-solid fa-basket-shopping"></i></a></li>
-         </ul>
+         
          <div class="menu-burger">
             <i class="fa-solid fa-bars"></i>
          </div>
+         <div class="item">
+            <ul>
+            
+              <li><a href="#">Ofertas</a></li>
+              <li><a href="#">Tiendas oficiales</a></li>
+              <li><a href="#">Vender</a></li>
+              <li><a href="#">Ayuda</a></li>
+            </ul>
+            <ul>
+              <li><a href="/register">Crear tu cuenta<i class="fa-solid fa-user-plus"></i></a></li>
+              <li><a href="/login">Ingresa<i class="fa-solid fa-right-to-bracket"></i></a></li>
+              <li><a href="#">Mis compras <i class="fa-solid fa-basket-shopping"></i></a></li>
+            </ul>
+         </div>
+        
         </nav>
         <div class="banner">
             <img src="./images/img-home-banner.jpg" alt="banner.jpg" >
